# photobox

./: README.md
server/: CaptureImage.py  app.py  eventqueue.py  gphoto_dummy.sh  gphoto_wrapper.py  pyproject.toml
server/static/: script.js  style.css
server/templates/: index.html
