[tool.poetry]
name = "photobox-server"
description = "Photo Box control server"
version = "0.0.1"
authors = ["Marc Lasch <mlasch@mailbox.org>"]

[tool.poetry.dependencies]
python = '^3.8'
flask = "^2.3.3"
gphoto2 = "^2.5.0"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = 'poetry.core.masonry.api'
